<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    tools:context=".LoginActivity" >
    
    <ImageView
        android:layout_width="@dimen/login_logo_width"
        android:layout_height="@dimen/login_logo_height"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_centerHorizontal="true"
        ></ImageView>
    
    <LinearLayout
        android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_centerInParent="true">
        
     		<TextView 
        	    android:id="@+id/errorTxt"
        	    android:layout_height="wrap_content"
        	    android:layout_width="wrap_content"
        	    android:text="@string/invalid_login"
        	    android:visibility="invisible"
        	    android:layout_marginBottom="@dimen/login_edit_spacing"/>
        	
        	<EditText 
				android:id="@+id/nameBox"
				android:layout_height="@dimen/login_button_height"
				android:layout_width="match_parent"
				android:hint="@string/name"
				android:gravity="center"
				android:inputType="textEmailAddress"
				android:visibility="invisible"
				android:background="@drawable/rounded_corners"
				android:layout_marginBottom="@dimen/login_edit_spacing"/>
        	
        	<EditText 
				android:id="@+id/usernameBox"
				android:layout_height="@dimen/login_button_height"
				android:layout_width="match_parent"
				android:hint="@string/username"
				android:gravity="center"
				android:inputType="textEmailAddress"
				android:background="@drawable/rounded_corners"
				android:layout_marginBottom="@dimen/login_edit_spacing"/>
        	
        	<EditText 
				android:id="@+id/passwordBox"
				android:layout_height="@dimen/login_button_height"
				android:layout_width="match_parent"
				android:hint="@string/password"
				android:gravity="center"
				android:inputType="textPassword"
				android:background="@drawable/rounded_corners"
				android:layout_marginBottom="@dimen/login_edit_spacing"/>
		   
		   <Button
				android:id="@+id/loginBtn"
				android:layout_height="@dimen/login_button_height"
				android:layout_width="match_parent"
				android:hint="@string/login" />
		   
    </LinearLayout>
    
    <Button
		android:id="@+id/registerBtn"
		android:layout_height="@dimen/login_button_height"
		android:layout_width="match_parent"
		android:layout_gravity="bottom"
		android:layout_alignParentBottom="true"
		android:hint="@string/new_account" />


</RelativeLayout>
